@@ -16,6 +16,8 @@ version 0.47:
 	* When you are queueing away messages, double clicking on
 	  a buddy's name will cause the messages for that name to be
 	  dequeued.
+	* You can choose which sound player you use at run-time
+	  (thanks Ben Miller)
 
 version 0.46 (10/18/2001):
 	* New applet icons (courtesy David Raeman)
